# iot-edge-opc-proxy

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  appveyor.yml  readme.md  thirdpartynotice.txt
api/csharp/: .gitignore  azure-iot-proxy.sln  global.json  proxy-api-csharp.sln
bld/: .gitignore  CMakeLists.txt  Dockerfile  build.cmd  build.sh  build4armhf.sh  build_linux.cmd  cmake_toolchain_file_armhf_oriole  proxy-linux.sln  proxy.sln  readme.md
bld/api/: CMakeLists.txt
bld/api/samples/: CMakeLists.txt  simple.sln  simple.vcxproj  simple.vcxproj.filters
bld/api/src/: CMakeLists.txt
bld/api/src/libmocket/: CMakeLists.txt  libmocket-shared.vcxitems  libmocket-shared.vcxitems.filters  libmocket-win32.vcxproj  libmocket-win32.vcxproj.filters
bld/docker/: .gitignore  Dockerfile  Dockerfile.alpine-3.5  Dockerfile.alpine-3.6  Dockerfile.debian-jessie.net  Dockerfile.debian-jessie.slim  Dockerfile.debian-stretch.slim  Dockerfile.debian-wheezy  Dockerfile.ubuntu-precise.slim  Dockerfile.ubuntu-trusty.gcc4.4  Dockerfile.ubuntu-trusty.inteledison  Dockerfile.ubuntu-trusty.net  Dockerfile.ubuntu-trusty.slim  Dockerfile.ubuntu-xenial.afl  Dockerfile.ubuntu-xenial.clang  Dockerfile.ubuntu-xenial.net  Dockerfile.ubuntu-xenial.slim  Dockerfile.ubuntu-yakkety.net  Dockerfile.ubuntu-zesty.slim  docker-build.sh  docker-entrypoint.sh
bld/docker/alpine/: Dockerfile
bld/etc/githooks/: post-commit
bld/src/: CMakeLists.txt
bld/src/libdnssd/: CMakeLists.txt  libdnssd-shared.vcxitems  libdnssd-shared.vcxitems.filters  libdnssd-win32-static.filters  libdnssd-win32-static.vcxproj  libdnssd-win32.vcxproj  libdnssd-win32.vcxproj.filters
bld/src/libiotsdk/: CMakeLists.txt  libiotsdk-shared.vcxitems  libiotsdk-shared.vcxitems.filters  libiotsdk-win32.vcxproj  libiotsdk-win32.vcxproj.filters
bld/src/libproxy/: CMakeLists.txt  libproxy-shared.vcxitems  libproxy-shared.vcxitems.filters  libproxy-win32-static.vcxproj  libproxy-win32-static.vcxproj.filters  libproxy-win32.vcxproj  libproxy-win32.vcxproj.filters
bld/src/libuamqp/: CMakeLists.txt  libuamqp-shared.vcxitems  libuamqp-shared.vcxitems.filters  libuamqp-win32.vcxproj  libuamqp-win32.vcxproj.filters
bld/src/libumqtt/: CMakeLists.txt  libumqtt-shared.vcxitems  libumqtt-shared.vcxitems.filters  libumqtt-win32.vcxproj
bld/src/libzlog/: CMakeLists.txt  libzlog-shared.vcxitems  libzlog-shared.vcxitems.filters  libzlog-win32.vcxproj  libzlog-win32.vcxproj.filters
bld/src/proxyd/: .gitignore  CMakeLists.txt  log.config  proxyd-linux.vcxproj  proxyd-linux.vcxproj.filters  proxyd-shared.vcxitems  proxyd-shared.vcxitems.filters  proxyd-win32.vcxproj  proxyd-win32.vcxproj.filters
bld/test/: CMakeLists.txt
bld/test/compat/: CMakeLists.txt  compat.sln
bld/test/compat/.nuget/: NuGet.Config
bld/test/compat/.nuget/LocalPackages/: Microsoft.Azure.Devices.Proxy.1.0.3.nupkg
bld/test/compat/libproto/: CMakeLists.txt  libproto-shared.vcxitems  libproto-shared.vcxitems.filters  libproto-win32.vcxproj
bld/test/fuzz/: .gitignore  CMakeLists.txt  afl-runner.cmd  afl-runner.sh  csfuzz-shared.vcxitems  csfuzz-shared.vcxitems.filters  csfuzz-win32.vcxproj  nsfuzz-shared.vcxitems  nsfuzz-shared.vcxitems.filters  nsfuzz-win32.vcxproj  protofuzz-shared.vcxitems  protofuzz-shared.vcxitems.filters  protofuzz-win32.vcxproj
bld/test/fuzz/json/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
bld/test/it/: CMakeLists.txt  libproxy-it-shared.vcxitems  libproxy-it-shared.vcxitems.filters  libproxy-it-win32.vcxproj
bld/test/libproto/: libproto-shared.vcxitems  libproto-shared.vcxitems.filters  libproto-win32.vcxproj
bld/test/libtest/: CMakeLists.txt  libtest-shared.vcxitems  libtest-shared.vcxitems.filters  libtest-win32.vcxproj  libtest-win32.vcxproj.filters
bld/test/ut/: CMakeLists.txt
bld/test/ut/libpal/: CMakeLists.txt  libpal-darwin-ut-shared.vcxitems  libpal-darwin-ut-shared.vcxitems.filters  libpal-darwin-ut-win32.vcxproj  libpal-darwin-ut-win32.vcxproj.filters  libpal-linux-ut-shared.vcxitems  libpal-linux-ut-shared.vcxitems.filters  libpal-linux-ut-win32.vcxproj  libpal-posix-ut-shared.vcxitems  libpal-posix-ut-shared.vcxitems.filters  libpal-posix-ut-win32.vcxproj  libpal-win-ut-shared.vcxitems  libpal-win-ut-shared.vcxitems.filters  libpal-win-ut-win32.vcxproj
bld/test/ut/libproxy/: CMakeLists.txt  libproxy-ut-shared.vcxitems  libproxy-ut-shared.vcxitems.filters  libproxy-ut-win32.vcxproj
bld/toolchain/: Dockerfile-linux-armhf-cross  build4armhf.sh  cmake_toolchain_file_armhf_linux  create_cross_chroot.sh  travis_cross.sh
githooks/: post-checkout  post-commit
inc/: api.h  common.h  io_browse.h  io_codec.h  io_cs.h  io_host.h  io_mqtt.h  io_proto.h  io_queue.h  io_ref.h  io_stream.h  io_token.h  io_transport.h  io_types.h  io_url.h  io_ws.h  os.h  os_linux.h  os_mock.h  os_posix.h  os_win.h  pal.h  pal_cred.h  pal_err.h  pal_ev.h  pal_file.h  pal_mt.h  pal_net.h  pal_proc.h  pal_rand.h  pal_scan.h  pal_sd.h  pal_sk.h  pal_time.h  pal_types.h  pal_ws.h  prx_browse.h  prx_buffer.h  prx_client.h  prx_config.h  (+23 more)
jenkins/: linux_c.sh  windows_c.cmd
src/: io_browse.c  io_codec.c  io_cs.c  io_mqtt.c  io_proto.c  io_queue.c  io_ref.c  io_token.c  io_transport.c  io_types.c  io_url.c  io_ws.c  pal.c  prx_browse.c  prx_buffer.c  prx_client.c  prx_config.c  prx_err.c  prx_host.c  prx_log.c  prx_main.c  prx_module.c  prx_ns.c  prx_sched.c  prx_server.c  util_handle.c  util_log.c  util_mem.c  util_misc.c  util_ringbuf.c  util_signal.c  util_stream.c  util_string.c  util_time.c  util_zlog.c  xio_sk.c  xio_ws.c
src/pal/: pal_cred_gnome.c  pal_cred_stub.c  pal_cred_win.c  pal_err_posix.c  pal_err_win.c  pal_ev_epoll.c  pal_ev_kq.c  pal_ev_poll.c  pal_ev_win.c  pal_file_posix.c  pal_file_win.c  pal_main_win.c  pal_mt_posix.c  pal_mt_win.c  pal_net_linux.c  pal_net_posix.c  pal_net_stub.c  pal_net_win.c  pal_proc_linux.c  pal_proc_posix.c  pal_proc_win.c  pal_rand_linux.c  pal_rand_openssl.c  pal_rand_win.c  pal_scan_linux.c  (+12 more)
tools/: build.cmd  build.sh
(+395 files in other folders)
