#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

#add_executable(mocket 
#	${_API_SAMPLES}/simple.c)
#target_link_libraries(mocket libproxy libmocket)
#set_target_properties(mocket PROPERTIES FOLDER "samples")
